--- a/.github/actions/test/action.yml
+++ b/.github/actions/test/action.yml
@@ -24,7 +24,7 @@ runs:
         export REPORT_EXIT_STATUS=no
         export SKIP_IO_CAPTURE_TESTS=1
         sapi/cli/php run-tests.php -P -q ${{ inputs.runTestsParameters }} \
-          -j$(/usr/bin/nproc) \
+          -j$(${{ env.ARCH != 'macos' && '/usr/bin/nproc' || 'sysctl -n hw.logicalcpu' }}) \
           -g FAIL,XFAIL,BORK,WARN,LEAK,XLEAK,SKIP \
           --offline \
           --show-diff \
