--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -23,19 +23,25 @@ jobs:
     strategy:
       matrix:
         include:
-        - arch: macos
+        - arch:
+            name: linux-i386
+            container: i386/ubuntu:latest
           debug: true
-          zts: false
+          zts: true
       fail-fast: false
-    name: ${{ matrix.arch }}-${{ matrix.debug && 'debug' || 'release' }}-${{ matrix.zts
-      && 'zts' || 'nts' }}
-    runs-on: ${{ startsWith(matrix.arch, 'linux-') && 'ubuntu-20.04' || 'macOS-10.15'
+    name: ${{ matrix.arch.name }}-${{ matrix.debug && 'debug' || 'release' }}-${{
+      matrix.zts && 'zts' || 'nts' }}
+    runs-on: ${{ startsWith(matrix.arch.name, 'linux-') && 'ubuntu-20.04' || 'macOS-10.15'
       }}
+    container: ${{ matrix.arch.container }}
     env:
-      ARCH: ${{ matrix.arch }}
+      ARCH: ${{ matrix.arch.name }}
+      DOCKER_CONTAINER: ${{ matrix.arch.container }}
     steps:
     - name: git checkout
-      uses: actions/checkout@v2
+      uses: actions/checkout@v1
+      with:
+        fetch-depth: 1
     - name: Create mssql container
       if: env.ARCH != 'macos'
       uses: ./.github/actions/mssql
@@ -56,6 +62,7 @@ jobs:
     - name: make install
       uses: ./.github/actions/install
     - name: Setup
+      if: env.ARCH != 'macos'
       uses: ./.github/actions/setup
     - name: Test
       uses: ./.github/actions/test
