GitHub actions test with firebird, dblib and werror

--- a/.github/actions/configure-x64/action.yml
+++ b/.github/actions/configure-x64/action.yml
@@ -78,4 +78,7 @@ runs:
           --with-oci8=shared,instantclient,/opt/oracle/instantclient \
           --with-config-file-path=/etc \
           --with-config-file-scan-dir=/etc/php.d \
+          --with-pdo-firebird \
+          --with-pdo-dblib \
+          --enable-werror \
           ${{ inputs.configurationParameters }}
