Add nightly for GitHub actions

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -4,6 +4,7 @@ trigger:
     include:
       - PHP-7.4
       - PHP-8.0
+      - PHP-8.1
       - master
   paths:
     exclude:
@@ -19,6 +20,7 @@ schedules:
       include:
         - PHP-7.4
         - PHP-8.0
+        - PHP-8.1
         - master
 
 jobs:
@@ -27,14 +29,6 @@ jobs:
       configurationName: I386_DEBUG_ZTS
       configurationParameters: '--enable-debug --enable-zts'
   - ${{ if eq(variables['Build.Reason'], 'Schedule') }}:
-    - template: azure/job.yml
-      parameters:
-        configurationName: DEBUG_ZTS
-        configurationParameters: '--enable-debug --enable-zts'
-    - template: azure/job.yml
-      parameters:
-        configurationName: RELEASE_NTS
-        configurationParameters: '--disable-debug --disable-zts'
     - template: azure/i386/job.yml
       parameters:
         configurationName: I386_DEBUG_NTS
@@ -47,33 +41,6 @@ jobs:
       parameters:
         configurationName: I386_RELEASE_ZTS
         configurationParameters: '--disable-debug --enable-zts'
-    - template: azure/macos/job.yml
-      parameters:
-        configurationName: MACOS_DEBUG_ZTS
-        configurationParameters: '--enable-debug --enable-zts'
-    - template: azure/macos/job.yml
-      parameters:
-        configurationName: MACOS_RELEASE_NTS
-        configurationParameters: '--disable-debug --disable-zts'
-    - template: azure/macos/job.yml
-      parameters:
-        configurationName: MACOS_RELEASE_ZTS
-        configurationParameters: '--disable-debug --enable-zts'
-    - template: azure/job.yml
-      parameters:
-        configurationName: DEBUG_ZTS_ASAN_UBSAN
-        configurationParameters: >-
-            --enable-debug --enable-zts
-            CFLAGS='-fsanitize=undefined,address -DZEND_TRACK_ARENA_ALLOC'
-            LDFLAGS='-fsanitize=undefined,address'
-        runTestsParameters: --asan
-        timeoutInMinutes: 360
-    - template: azure/msan_job.yml
-      parameters:
-        configurationName: DEBUG_ZTS_MSAN
-        configurationParameters: '--enable-debug --enable-zts'
-        runTestsParameters: --msan
-        timeoutInMinutes: 90
     - template: azure/community_job.yml
       parameters:
         configurationName: COMMUNITY
