--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -19,6 +19,7 @@ on:
       - '**'
 jobs:
   LINUX_X64:
+    if: false
     strategy:
       fail-fast: false
       matrix:
@@ -60,6 +61,7 @@ jobs:
       - name: Verify generated files are up to date
         uses: ./.github/actions/verify-generated-files
   MACOS_DEBUG_NTS:
+    if: false
     runs-on: macos-10.15
     steps:
       - name: git checkout
